# pico-easytcp

./: .gitignore  CMakeLists.txt  README.MD  easytcp.c  easytcp.h  example.c
examples/: example.c
src/: easytcp.h
